--- a/db/events.yaml
+++ b/db/events.yaml
@@ -68,6 +68,11 @@ events:
     year: 2001
     type: attacco
     location: USA
+  2001-goldman-greece-swap:
+    year: 2001
+    type: financial
+    location: Greece
+    outcome: Greece entered Eurozone with hidden debt
   2008-crisi-finanziaria:
     year: 2008
     type: crisi
