--- a/db/organizations.yaml
+++ b/db/organizations.yaml
@@ -1465,6 +1465,12 @@ organizations:
       from: 1982
     - person: borge-brende
       role: member
+    - person: jacques-santer
+      role: member
+      note: Partecipante meetings
+    - person: jean-claude-juncker
+      role: member
+      note: Partecipante meetings
     - person: ursula-von-der-leyen
       role: member
     - person: matteo-renzi
@@ -3069,6 +3075,11 @@ organizations:
       from: 1999
       to: 2004
       note: Commissioner Employment, Social Affairs (Prodi Commission)
+    - person: edith-cresson
+      role: executive
+      from: 1995
+      to: 1999
+      note: Commissaria, scandalo nepotismo
   commonwealth:
     name: Commonwealth
     type: agency
@@ -9032,6 +9043,16 @@ organizations:
     name: European Parliament
     headquarters: Brussels/Strasbourg
     stakeholders:
+    - person: jacques-santer
+      role: member
+      from: 1999
+      to: 2004
+      note: MEP post-Commissione
+    - person: jacques-santer
+      role: executive
+      from: 1975
+      to: 1979
+      note: Vice-Presidente PE 1975-77, MEP fino 1979
     - person: eva-maydell
       role: member
       from: 2014
